Remoção de código desnecessário e melhorias no código.